tests/errors/preprocessor/in_eval_must_end_parenthesis.c
#EVAL (2 + 2

int main()
{
	return 0;
}
